<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <POU Name="EventHelper" Id="{20fd65cf-c883-0d8b-19ed-43645b78b546}" SpecialFunc="None">
    <Declaration><![CDATA[
FUNCTION_BLOCK EventHelper EXTENDS FB_BaseFb
VAR_INPUT
//	pFlowID: 	POINTER TO DINT;
	pEvHeader: 	POINTER TO EventHeader_Typ;
	pEvPar: 	POINTER TO EventParam_Typ;
	Busy:BOOL:=FALSE;
	Done:BOOL;
END_VAR
VAR_OUTPUT
	
END_VAR
VAR
	EventReport :EventReport_Typ;
	InitDone:	 BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF NOT InitDone THEN
	mInit();
	InitDone:= TRUE;
END_IF
]]></ST>
    </Implementation>
    <Method Name="mInit" Id="{26fd8f59-d260-44eb-9441-1f0c2395e49a}">
      <Declaration><![CDATA[METHOD mInit : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[SetLoggerCategoryName('Events');]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="EventHelper">
      <LineId Id="28" Count="1" />
      <LineId Id="32" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="11" Count="0" />
    </LineIds>
    <LineIds Name="EventHelper.mInit">
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>